Test/git-issues/git-issue-3187b.dfy.expect
git-issue-3187b.dfy(6,13): Error: a mutable field must be declared with a type and may not have an initializer
1 parse errors detected in git-issue-3187b.dfy
